--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^1.32.0",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0",
