--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@adminjs/express": "^6.1.1",
+    "@adminjs/typeorm": "^5.0.1",
+    "adminjs": "^7.8.16",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^1.32.0",
