--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.13.3",
     "pnpm": "^10.11.1",
     "reflect-metadata": "^0.2.2",
+    "rollup": "^4.41.1",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.20"
   }
