--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "vercel-build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "dev": "nodemon --ext ts --exec tsx src/index.ts",
     "clean": "rm -rf dist",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
+    "@types/express-formidable": "^1.2.3",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "nodemon": "^3.1.9",
