--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.13.3",
