--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0",
