--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^7.0.3",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
+    "resend": "^4.6.0",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.20"
   }
