--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   },
-  "include": ["src"],                  
+  "include": ["src", "api"],                  
   "exclude": ["node_modules", "dist"]  
 }
