--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@types/nodemailer": "^6.4.17",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
@@ -34,12 +34,14 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "resend": "^4.6.0",
+    "twilio": "^5.7.2",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.20"
   }
