--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^1.32.0",
@@ -41,6 +42,7 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "resend": "^4.6.0",
+    "socket.io": "^4.8.1",
     "twilio": "^5.7.2",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.20"
