--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shipbee",
   "version": "1.0.0",
-  "main": "dist/server.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
