--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "NodeNext",              
     "moduleResolution": "NodeNext",    
     "outDir": "./dist",                
-    "rootDir": ".",              
+    "rootDir": "./src",              
     "esModuleInterop": true,           
     "skipLibCheck": true,              
     "forceConsistentCasingInFileNames": true,
@@ -12,6 +12,6 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   },
-  "include": ["src", "api"],                  
+  "include": ["src"],                  
   "exclude": ["node_modules", "dist"]  
 }
