--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "googleapis": "^164.1.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
