--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^1.32.0",
+    "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "googleapis": "^164.1.0",
