--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "googleapis": "^164.1.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
