--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^1.32.0",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "googleapis": "^164.1.0",
