--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-session": "^1.18.2",
     "googleapis": "^164.1.0",
     "handlebars": "^4.7.8",
+    "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
