--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",                
-    "module": "NodeNext",              
+    "module": "NodeNext",
+    "resolveJsonModule": true,              
     "moduleResolution": "NodeNext",    
     "outDir": "./dist",                
     "rootDir": "./src",              
