--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
+    "firebase-admin": "^13.6.0",
     "googleapis": "^164.1.0",
     "handlebars": "^4.7.8",
     "i18n-iso-countries": "^7.14.0",
