--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "handlebars": "^4.7.8",
     "i18n-iso-countries": "^7.14.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.33",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-schedule": "^2.1.1",
