--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@types/nodemailer": "^6.4.17",
+    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
@@ -52,6 +53,8 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^4.6.0",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.7.2",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.20"
