--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,13 @@ jobs:
             echo "IMAGE_TAG=latest" >> $GITHUB_ENV
             echo "SERVICE_NAME=shipbee-task-def-service-a0b0xli9" >> $GITHUB_ENV
             echo "TASK_DEF_NAME=shipbee-task-def" >> $GITHUB_ENV
+            echo "CONTAINER_NAME=shipbee-container-2" >> $GITHUB_ENV
           else
             echo "ENV=staging" >> $GITHUB_ENV
             echo "IMAGE_TAG=latest" >> $GITHUB_ENV
             echo "SERVICE_NAME=shipbee-backend-staging" >> $GITHUB_ENV
             echo "TASK_DEF_NAME=shipbee-backend-staging" >> $GITHUB_ENV
+            echo "CONTAINER_NAME=shipbee-backend-staging" >> $GITHUB_ENV
           fi
 
       # 🔹 Build & push image
@@ -68,8 +70,15 @@ jobs:
             .registeredBy
           )')
 
-          UPDATED_TASK_DEF=$(echo "$CLEAN_TASK_DEF" | jq --arg IMAGE "$IMAGE_URI" '
-            .containerDefinitions[0].image = $IMAGE
+          UPDATED_TASK_DEF=$(echo "$CLEAN_TASK_DEF" | jq \
+            --arg IMAGE "$IMAGE_URI" \
+            --arg CONTAINER "${{ env.CONTAINER_NAME }}" '
+            .containerDefinitions |= map(
+              if .name == $CONTAINER
+              then .image = $IMAGE
+              else .
+              end
+            )
           ')
 
           echo "$UPDATED_TASK_DEF" > new-task-def.json
