--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ES2022",                
+    "target": "ES2022",
     "module": "NodeNext",
-    "resolveJsonModule": true,              
-    "moduleResolution": "NodeNext",    
-    "outDir": "./dist",                
-    "rootDir": "./src",              
-    "esModuleInterop": true,           
-    "skipLibCheck": true,              
+    "removeComments": false,
+    "resolveJsonModule": true,
+    "moduleResolution": "NodeNext",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   },
-  "include": ["src"],                  
-  "exclude": ["node_modules", "dist"]  
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
