--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.988.0",
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
