--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "resend": "^4.6.0",
+    "soap": "^1.7.1",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
